--- a/board-ev/src/main/resources/application.properties
+++ b/board-ev/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=board-ev
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:33067/
-spring.datasource.username=root
-spring.datasource.password=test1234
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
